--- a/WindowsShade/WindowsShade.csproj
+++ b/WindowsShade/WindowsShade.csproj
@@ -90,6 +90,7 @@
   <ItemGroup>
     <Content Include="Resources\bright2.ico" />
     <Content Include="Resources\bright2.png" />
+    <Content Include="Resources\q.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
