--- a/WindowsShade/WindowsShade.csproj
+++ b/WindowsShade/WindowsShade.csproj
@@ -100,6 +100,7 @@
   <ItemGroup>
     <Content Include="Resources\bright2.ico" />
     <Content Include="Resources\bright2.png" />
+    <Content Include="Resources\monitor.jpg" />
     <Content Include="Resources\q.ico" />
   </ItemGroup>
   <ItemGroup>
