--- a/WindowsShade/WindowsShade.csproj
+++ b/WindowsShade/WindowsShade.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Models\Common.cs" />
     <Compile Include="Models\Config.cs" />
     <Compile Include="Models\ScreenBrightness.cs" />
+    <Compile Include="Models\Shade.cs" />
     <Compile Include="Models\ShadeTypes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
