添加屏幕亮度收集代码

--- a/WindowsShade/WindowsShade.csproj
+++ b/WindowsShade/WindowsShade.csproj
@@ -65,6 +65,7 @@
     <Compile Include="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\Brightness.cs" />
     <Compile Include="Models\Common.cs" />
     <Compile Include="Models\Config.cs" />
     <Compile Include="Models\Monitor.cs" />
