--- a/WindowsShade/WindowsShade.csproj
+++ b/WindowsShade/WindowsShade.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>WindowsShade</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -46,9 +47,13 @@
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -66,7 +71,9 @@
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\Brightness.cs" />
+    <Compile Include="Models\BrightnessTrain.cs" />
     <Compile Include="Models\Common.cs" />
+    <Compile Include="Models\Compares.cs" />
     <Compile Include="Models\Config.cs" />
     <Compile Include="Models\Monitor.cs" />
     <Compile Include="Models\Resolution.cs" />
@@ -74,8 +81,8 @@
     <Compile Include="Models\Shade.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Task\AdjustBrightnessEventArgs.cs" />
-    <Compile Include="Task\AdjustBrightnessHandler.cs" />
+    <Compile Include="Task\EventArgs.cs" />
+    <Compile Include="Task\EventHandlers.cs" />
     <Compile Include="Task\DataDriver.cs" />
     <Compile Include="Views\FormShade.cs">
       <SubType>Form</SubType>
@@ -100,6 +107,7 @@
       <DependentUpon>FormShade.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="App.config" />
+    <None Include="packages.config" />
     <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
