--- a/BrightnessTrainAPI/appsettings.json
+++ b/BrightnessTrainAPI/appsettings.json
@@ -1,8 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "BrightnessTrainedFolder": "BrightnessTrained",
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
