--- a/WindowsShade.Tests/WindowsShade.Tests.csproj
+++ b/WindowsShade.Tests/WindowsShade.Tests.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BrightDataHandler.cs" />
+    <Compile Include="GetNumber.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
