--- a/BrightnessTrainAPI/appsettings.Development.json
+++ b/BrightnessTrainAPI/appsettings.Development.json
@@ -1,9 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
-  }
+    "BrightnessTrainedFolder": "BrightnessTrained",
+    "Logging": {
+        "LogLevel": {
+            "Default": "Debug",
+            "System": "Information",
+            "Microsoft": "Information"
+        }
+    },
+    "AllowedHosts": "*"
 }
