--- a/BrightnessTrainAPI/BrightnessTrainAPI.csproj
+++ b/BrightnessTrainAPI/BrightnessTrainAPI.csproj
@@ -10,6 +10,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\BrightnessTrained\**" />
+    <Content Remove="wwwroot\BrightnessTrained\**" />
+    <EmbeddedResource Remove="wwwroot\BrightnessTrained\**" />
+    <None Remove="wwwroot\BrightnessTrained\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
