系统屏幕不存在时，不允许配置该屏幕

--- a/WindowsShade/WindowsShade.csproj
+++ b/WindowsShade/WindowsShade.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Models\Common.cs" />
     <Compile Include="Models\Compares.cs" />
     <Compile Include="Models\Config.cs" />
+    <Compile Include="Models\HardwareClass.cs" />
     <Compile Include="Models\Monitor.cs" />
     <Compile Include="Models\Resolution.cs" />
     <Compile Include="Models\ScreenBrightness.cs" />
